# python-template

./: CHANGES.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: conf.py
