[project]
name = "changeme"
dynamic = ["version"]
description = "changeme"
authors = [
    {name = "changeme", email = "changeme@changeme.com"},
]
readme = "README.rst"
repository = "https://github.com/cr3/changeme"
requires-python = ">=3.10,<4.0"

[project.optional-dependencies]

test = [
  "coverage>=7.2.3,<8.0.0",
  "pytest>=7.2.2,<8.0.0",
]

check = [
  "black>=26.1.0,<26.2.0",
  "pre-commit>=4.5.1,<4.6.0",
  "pyyaml>=6.0.3,<7.0.0",
  "ruff>=0.0.265,<1.0.0",
]

docs = [
  "sphinx>=6.1.3,<7.0.0",
  "sphinxcontrib-log-cabinet>=1.0.1,<2.0.0",
  "sphinx-rtd-theme>=1.2.0,<2.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 120
target-version = ["py39"]
preview = true

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Create your own exception
    "TRY002",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.rst",
]
testpaths = [
    "changeme",
    "docs",
    "tests",
]

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
source = [
    "changeme",
    "*/*/site-packages",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = [
    "changeme",
]
