[project]
name = "changeme"
dynamic = ["version"]
description = "changeme"
authors = [
    {name = "changeme", email = "changeme@changeme.com"},
]
readme = "README.rst"
requires-python = ">=3.12,<4.0"

[project.urls]
Repository = "https://github.com/cr3/changeme"

[project.optional-dependencies]

test = [
  "coverage>=7.2.3,<8.0.0",
  "pytest>=9.0.0,<10.0.0",
]

check = [
  "ruff>=0.15.0,<1.0.0",
]

docs = [
  "sphinx>=9.0.0,<10.0.0",
  "sphinxcontrib-log-cabinet>=1.0.1,<2.0.0",
  "sphinx-rtd-theme>=3.1.0,<3.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Create your own exception
    "TRY002",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.rst",
]
testpaths = [
    "changeme",
    "docs",
    "tests",
]

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
source = [
    "changeme",
    "*/*/site-packages",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = [
    "changeme",
]
